Prepare for installation to joomla CMS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="js-hand-world slide slide-hand-world hide">
         <h3 class="title js-title">The world as we got it</h3>
 
-        <img src="/images/hand_world.jpg" width="600" height="904" class="hand-world js-hand-world"/>
+        <img src="/images/save_earth/hand_world.jpg" width="600" height="904" class="hand-world js-hand-world"/>
 
         <div class="earth js-earth"></div>
     </div>
@@ -56,7 +56,7 @@
             <div class="oil-tap js-oil-tap"></div>
         </div>
         <div class="gas-burn js-gus-burn">
-            <img src="/images/gas_burn.jpg" width="1170" height="1170"/>
+            <img src="/images/save_earth/gas_burn.jpg" width="1170" height="1170"/>
         </div>
     </div>
     <div class="js-slide-6-challenges slide slide-6-challenges hide">
@@ -66,7 +66,7 @@
 
         <div class="earth"></div>
         <div class="gas-burn js-gus-burn">
-            <img src="/images/gas_burn.jpg" width="1170" height="1170"/>
+            <img src="/images/save_earth/gas_burn.jpg" width="1170" height="1170"/>
         </div>
     </div>
     <div class="js-slide-global-warming slide slide-global-warming hide">
@@ -75,7 +75,7 @@
 
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
-                <img src="/images/global_warming.jpg" width="136" height="91" alt="Global Warming"/>
+                <img src="/images/save_earth/global_warming.jpg" width="136" height="91" alt="Global Warming"/>
             </a>
         </div>
     </div>
@@ -85,13 +85,13 @@
 
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
-                <img src="/images/global_warming.jpg"
+                <img src="/images/save_earth/global_warming.jpg"
                      width="136" height="91"
                      alt="Global Warming"/>
             </a>
             <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
                class="js-rectangle six-challenges ocean-acidification">
-                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+                <img src="/images/save_earth/dying_fish.jpg" width="97" height="146"/>
             </a>
         </div>
     </div>
@@ -100,17 +100,17 @@
 
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
-                <img src="/images/global_warming.jpg"
+                <img src="/images/save_earth/global_warming.jpg"
                      width="136" height="91"
                      alt="Global Warming"/>
             </a>
             <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
                class="js-rectangle six-challenges ocean-acidification">
-                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+                <img src="/images/save_earth/dying_fish.jpg" width="97" height="146"/>
             </a>
             <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges declining-ice">
-                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+                <img src="/images/save_earth/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
             </a>
         </div>
     </div>
@@ -119,21 +119,21 @@
 
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
-                <img src="/images/global_warming.jpg"
+                <img src="/images/save_earth/global_warming.jpg"
                      width="136" height="91"
                      alt="Global Warming"/>
             </a>
             <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
                class="js-rectangle six-challenges ocean-acidification">
-                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+                <img src="/images/save_earth/dying_fish.jpg" width="97" height="146"/>
             </a>
             <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges declining-ice">
-                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+                <img src="/images/save_earth/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges extreme_events">
-                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+                <img src="/images/save_earth/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
             </a>
         </div>
     </div>
@@ -142,25 +142,25 @@
 
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
-                <img src="/images/global_warming.jpg"
+                <img src="/images/save_earth/global_warming.jpg"
                      width="136" height="91"
                      alt="Global Warming"/>
             </a>
             <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
                class="js-rectangle six-challenges ocean-acidification">
-                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+                <img src="/images/save_earth/dying_fish.jpg" width="97" height="146"/>
             </a>
             <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges declining-ice">
-                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+                <img src="/images/save_earth/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges extreme_events">
-                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+                <img src="/images/save_earth/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges flooding_dangers">
-                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+                <img src="/images/save_earth/flooding.jpg" width="146" height="97" alt="Flooding"/>
             </a>
         </div>
     </div>
@@ -169,29 +169,29 @@
 
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
-                <img src="/images/global_warming.jpg"
+                <img src="/images/save_earth/global_warming.jpg"
                      width="136" height="91"
                      alt="Global Warming"/>
             </a>
             <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
                class="js-rectangle six-challenges ocean-acidification">
-                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+                <img src="/images/save_earth/dying_fish.jpg" width="97" height="146"/>
             </a>
             <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges declining-ice">
-                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+                <img src="/images/save_earth/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges extreme_events">
-                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+                <img src="/images/save_earth/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges flooding_dangers">
-                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+                <img src="/images/save_earth/flooding.jpg" width="146" height="97" alt="Flooding"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges glacier-retreat">
-                <img src="/images/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
+                <img src="/images/save_earth/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
             </a>
         </div>
     </div>
@@ -204,29 +204,29 @@
 
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
-                <img src="/images/global_warming.jpg"
+                <img src="/images/save_earth/global_warming.jpg"
                      width="136" height="91"
                      alt="Global Warming"/>
             </a>
             <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
                class="js-rectangle six-challenges ocean-acidification">
-                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+                <img src="/images/save_earth/dying_fish.jpg" width="97" height="146"/>
             </a>
             <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges declining-ice">
-                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+                <img src="/images/save_earth/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges extreme_events">
-                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+                <img src="/images/save_earth/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges flooding_dangers">
-                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+                <img src="/images/save_earth/flooding.jpg" width="146" height="97" alt="Flooding"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges glacier-retreat">
-                <img src="/images/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
+                <img src="/images/save_earth/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
             </a>
         </div>
     </div>
@@ -239,29 +239,29 @@
 
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
-                <img src="/images/global_warming.jpg"
+                <img src="/images/save_earth/global_warming.jpg"
                      width="136" height="91"
                      alt="Global Warming"/>
             </a>
             <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
                class="js-rectangle six-challenges ocean-acidification">
-                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+                <img src="/images/save_earth/dying_fish.jpg" width="97" height="146"/>
             </a>
             <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges declining-ice">
-                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+                <img src="/images/save_earth/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges extreme_events">
-                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+                <img src="/images/save_earth/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges flooding_dangers">
-                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+                <img src="/images/save_earth/flooding.jpg" width="146" height="97" alt="Flooding"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges glacier-retreat">
-                <img src="/images/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
+                <img src="/images/save_earth/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
             </a>
         </div>
     </div>
@@ -272,29 +272,29 @@
 
         <div class="earth">
             <a href="#" target="_blank" class="js-rectangle six-challenges global-warming">
-                <img src="/images/global_warming.jpg"
+                <img src="/images/save_earth/global_warming.jpg"
                      width="136" height="91"
                      alt="Global Warming"/>
             </a>
             <a href="https://www.ted.com/playlists/78/climate_change_oh_it_s_real" target="_blank"
                class="js-rectangle six-challenges ocean-acidification">
-                <img src="/images/dying_fish.jpg" width="97" height="146"/>
+                <img src="/images/save_earth/dying_fish.jpg" width="97" height="146"/>
             </a>
             <a href="http://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges declining-ice">
-                <img src="/images/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
+                <img src="/images/save_earth/ice_bear.jpg" width="146" height="97" alt="Declining Arctic Ice"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges extreme_events">
-                <img src="/images/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
+                <img src="/images/save_earth/tornado.jpg" width="146" height="103" alt="Extreme Events"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges flooding_dangers">
-                <img src="/images/flooding.jpg" width="146" height="97" alt="Flooding"/>
+                <img src="/images/save_earth/flooding.jpg" width="146" height="97" alt="Flooding"/>
             </a>
             <a href="https://www.ted.com/talks/sylvia_earle_s_ted_prize_wish_to_protect_our_oceans" target="_blank"
                class="js-rectangle six-challenges glacier-retreat">
-                <img src="/images/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
+                <img src="/images/save_earth/glacier_retreat.jpg" width="146" height="116" alt="Glacier Retreat"/>
             </a>
         </div>
     </div>
@@ -587,7 +587,7 @@
         </div>
         <div class="final-form-line js-final-form-line"></div>
         <form class="final-form js-final-form">
-            <img src="/images/solar_power_form.jpg" width="400" height="138">
+            <img src="/images/save_earth/solar_power_form.jpg" width="400" height="138">
             <h4>Be a Hero</h4>
 
             <p>
